feat: adiciona ordenação por data (asc|desc) getFollowedSuppliersRecentProducts